# practice

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/practice/: main.py
tests/: test_main.py
