[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/practice"]

[project]
name = "practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mypy>=1.20.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pytest>=9.0.2",
    "scimage>=0.1.7",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.9",
]

[tool.uv.workspace]
members = [
    "Henry",
]

[tool.ruff]
select = ["E", "F", "I", "NPY"]
