[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "my_research_project"
dynamic = ["version"]  # Tells Hatchling the version isn't a fixed string
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mypy>=1.20.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pytest>=9.0.2",
    "scimage>=0.1.7",
]

[project]

[tool.hatch.version]
source = "vcs"  # VCS = Version Control System (Git)

[tool.hatch.version.raw-options]
local_scheme = "no-local-version" # Clean versions like 1.0.1

[tool.hatch.build.targets.wheel]
packages = ["src/practice"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.9",
]

[tool.uv.workspace]
members = [
    "Henry",
]

[tool.ruff.lint]
select = ["E", "F", "I", "NPY"]
